增加文本大小显示

--- a/file.html
+++ b/file.html
@@ -80,6 +80,7 @@
         <button id="deleteBtn">Delete</button>
         <button id="downloadBtn">Download</button>
         <button id="copyBtn">Copy</button>
+        <label>{{.FileName}}_{{.FileSize}} </label>
     </div>
     <pre  id="fileContent">{{.Content}}</pre>
 </div>
